[gd_scene load_steps=6 format=3 uid="uid://b0cgbfnl4vmte"]

[ext_resource type="FontFile" uid="uid://decbyrlmfeftw" path="res://Assets/Fonts/Kenney Pixel Square.ttf" id="1_1un3g"]
[ext_resource type="Script" path="res://scripts/shop_UI.gd" id="1_7ib7i"]
[ext_resource type="Texture2D" uid="uid://bum5ttnh3gaao" path="res://Assets/Sprites/SmallPot.png" id="2_6le40"]
[ext_resource type="Texture2D" uid="uid://ceo8mmd6lpxfb" path="res://Assets/Sprites/MediumPot.png" id="3_bfbkx"]
[ext_resource type="Texture2D" uid="uid://ctpm6381wtd6k" path="res://Assets/Sprites/BonsaiPot.png" id="4_d01m8"]

[node name="PotsUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1919.0
offset_bottom = 402.0
mouse_filter = 2
script = ExtResource("1_7ib7i")

[node name="ShopPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 192.0
offset_top = 109.0
offset_right = 269.0
offset_bottom = 309.0
mouse_filter = 2
color = Color(1, 1, 0.701961, 0.745098)
metadata/_edit_use_anchors_ = true

[node name="SmallPot" type="Button" parent="ShopPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 68.0
offset_bottom = 63.0

[node name="Label" type="Label" parent="ShopPanel/SmallPot"]
layout_mode = 0
offset_left = 74.0
offset_top = 14.0
offset_right = 142.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("1_1un3g")
text = "Cost: 5"

[node name="Sprite2D" type="Sprite2D" parent="ShopPanel/SmallPot"]
position = Vector2(30, -81)
scale = Vector2(7.64063, 7.70313)
texture = ExtResource("2_6le40")

[node name="MediumPot" type="Button" parent="ShopPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 71.0
offset_right = 68.0
offset_bottom = 126.0

[node name="Label2" type="Label" parent="ShopPanel/MediumPot"]
layout_mode = 0
offset_left = 74.0
offset_top = 17.0
offset_right = 150.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("1_1un3g")
text = "Cost: 10"

[node name="Sprite2D" type="Sprite2D" parent="ShopPanel/MediumPot"]
position = Vector2(31, -20)
scale = Vector2(4, 4)
texture = ExtResource("3_bfbkx")

[node name="BonsaiPot2" type="Button" parent="ShopPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 135.0
offset_right = 68.0
offset_bottom = 191.0

[node name="Label2" type="Label" parent="ShopPanel/BonsaiPot2"]
layout_mode = 0
offset_left = 74.0
offset_top = 16.0
offset_right = 150.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_1un3g")
text = "Cost: 10"

[node name="Sprite2D" type="Sprite2D" parent="ShopPanel/BonsaiPot2"]
position = Vector2(30, 17)
scale = Vector2(4, 4)
texture = ExtResource("4_d01m8")

[connection signal="pressed" from="ShopPanel/SmallPot" to="." method="_on_small_pot_pressed"]
[connection signal="pressed" from="ShopPanel/MediumPot" to="." method="_on_medium_pot_pressed"]
[connection signal="pressed" from="ShopPanel/BonsaiPot2" to="." method="_on_bonsai_pot_2_pressed"]
